// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Element renders image 1`] = `
<img
  alt="test-alt"
  className="tribe-editor__image"
  src="test-src"
/>
`;

exports[`Image Element renders image with class 1`] = `
<img
  alt="test-alt"
  className="tribe-editor__image test-class"
  src="test-src"
/>
`;

exports[`Image Element renders image with extra props 1`] = `
<img
  alt="test-alt"
  className="tribe-editor__image"
  height="42"
  src="test-src"
  width="42"
/>
`;
